--- a/src/componentes/BarraSup.css
+++ b/src/componentes/BarraSup.css
@@ -14,20 +14,44 @@
   margin-right: 2%;
 }
 
+.links-barraSup{
+  width: 15%;
+  height: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.5em;
+}
+
 .links-barraSup a{
   color: #EAE320;
-  margin-left: 60%;
-  font-size: 0.6em;
 }
 
 .links-barraSup a:hover{
   color: orange;
 }
 
+.der-barraSup{
+  width: 15%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.salir-barraSup{
+  font-size: 0.4em;
+  padding-right: 15px;
+  cursor: pointer;
+  color: red;
+}
+
+.salir-barraSup:hover{
+  color: orangered;
+  font-size: 0.5em;
+}
+
 .status-barraSup{
-  width: 10%;
   font-size: 0.3em;
-  margin-right: 3%;
   text-align: center;
 }
 
